=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.x CA
 - Added: CA "Templates" for USA for years (1900, 1890, 1880, 1870, 1860 and 1850), also used Nigels latest css values (modified a bit) (windmillway)
 - Added: Notes Input field, also if the Notes, Enumeration, or Locality fields are empty, the line is completely removed in the Shared note. (windmillway)
 - Added: Language file lang.en.php to GEDFact_assistant/languages/ (windmillway)
 - Changed: Moved Main Javascript Functions to PHP file (GEDFact_assistant/_CENS/js/census_5_input.js.php) deleted old file (windmillway)
 - Changed: Corrected JavaScript problem with "Head of Family" Names containing double quotes (Nickname etc) (windmillway)
 - Changed: added missing Header Tooltip messages. (windmillway)
 - Changed: Correct spelling of Tool tip message "Foreign". (windmillway)
 - Merged: Merge changes r6048- r6063 from the trunk. (windmillway)
 - Changed: 1) Improvements to dynamic switching between Census Country/Years. 
            2) UK Finished, Still USA 1920 and less to do. 
			3) Hover tooltip enabled on edit and view Table Headers (windmillway) 
 - Changed: GEDFact_assistant/_CENS/ files to make use of new shared note formatting (windmillway)
 - a) Small additions to show one or two examples of dynamically hiding columns when changing Census Year (Not finished) 
      Choose UK and after entering one or two items, change year to 1881, The relation column is hidden.
      Works OK in IE but displacement problems in FF. Shared note does not change yet. 
 - b) Re-added the auto headers to the shared note. (windmillway)
 - Merged: Merge changes r6038- r6047 from the trunk. (windmillway)
 - Changed: More changes for Census Assistant pop up window dimensions (now 870x726) (windmillway)